# spiderweb-sim

./: Cargo.toml  fps_by_bugs.csv  fps_by_strands.csv  readme.md
src/: main.rs  renderer.rs  simulator.rs  web.rs  webgen.rs
src/shaders/: circle_fragment.glsl  fragment.glsl  vertex.glsl
