[package]
name = "spiderweb-sim"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = "*"
gl = "*"
glfw = "^0.40"
imgui = "^0.5.0"
rand = "*"
imgui-glfw-support = "0.4.1"
imgui-opengl-renderer = "0.9.0"
csv = "*"
